fix like without login user, (avatar for user) save image on server minio, get image from server minio

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,21 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
-server.max-http-header-size=10000000 
+server.max-http-header-size=10000000
+
+# Set individual file size
+spring.servlet.multipart.max-file-size=50MB
+# Minio Host
+minio.url=https://play.min.io
+# Minio Bucket name for your application
+minio.bucket.name=ig-project
+# Minio access key (login)
+minio.access.secret=minioadmin
+# Minio secret key (password)
+minio.access.key=minioadmin
+
+server.port=8080
+
+
+
 
