--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.servlet.multipart.max-file-size=50MB
 # Minio Host
 minio.url=https://play.min.io
 # Minio Bucket name for your application
-minio.bucket.name=ig-project
+minio.bucket.name=asdsd-dsasasad-adsasd-32-fdfd00
 # Minio access key (login)
 minio.access.secret=minioadmin
 # Minio secret key (password)
