--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=jdbc:postgresql://localhost:5432/IG
-spring.datasource.username= postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://dpg-cn54go8cmk4c73eodov0-a.frankfurt-postgres.render.com:5432/ig_l7m0
+spring.datasource.username=root
+spring.datasource.password=MRnLMef404gOBEHqkfUuJBagciLmXtJe
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
